[gd_scene load_steps=5 format=3 uid="uid://bory2q8wdwwns"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/ARobotScript.gd" id="1_d1wad"]
[ext_resource type="Texture2D" uid="uid://cdeh2rbaoytdw" path="res://Assets/Images/Objects/Enemy/EvilRoomba.png" id="2_rli8n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4s7g"]
size = Vector2(32, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2oo56"]
size = Vector2(50, 16)

[node name="ARobot" type="CharacterBody2D"]
script = ExtResource("1_d1wad")

[node name="ARobotSprite" type="Sprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(0.944, 1)
texture = ExtResource("2_rli8n")

[node name="ARobotCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_u4s7g")

[node name="ExtRaycastDownRight" type="RayCast2D" parent="."]
position = Vector2(23, -3)
target_position = Vector2(0, 31)

[node name="ExtRaycastDownLeft" type="RayCast2D" parent="."]
position = Vector2(-23, -3)
target_position = Vector2(0, 31)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(-28, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(28, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(15, -5)
target_position = Vector2(0, 5)

[node name="RayCastDown2" type="RayCast2D" parent="."]
position = Vector2(-14, -5)
target_position = Vector2(0, 5)

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_2oo56")

[node name="ExplodeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="PlayerDetector" to="." method="_on_player_detector_area_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
